Lade till lite HTML

--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-Välkommen till min sida!
+<html>
+<head>
+<title>Välkommen till min sida!</title>
+</head>
+<body>
+    <h1>Välkommen till min sida</h1>
 Här ska det komma en meny: C.Free.IT; Webbshop; Bildbank; Projekt; Språk; Kontakt
+</body>
+</html>
